# amiberry

./: .gitattributes  .gitignore  .gitmodules  .packit.yaml  AGENTS.md  AUTHORS  Android.mk  AndroidAppSettings.cfg  AndroidBuild.sh  Brewfile  CMakeLists-psp2switch.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CppProperties.json  Entitlements.plist  Info.plist.template  Makefile  Makefile_rpi1  PULL_REQUEST_TEMPLATE  README.md  Readme_Pandora.txt  azure-pipelines.yml  link_pandora_dirs.sh  macos_init_amiberry.zsh  make-bundle.sh  run_amiberry.zsh  unlink_dirs.sh  vcpkg.json
.claude/: CLAUDE.md
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  release.yml  tag-changelog-config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: download-qemu-uae-plugin.ps1  download-qemu-uae-plugin.sh  upload-launchpad-ppa-source.sh
.github/workflows/: authors.yml  auto-assign.yml  c-cpp.yml  claude-code-review.yml  claude.yml  flatpak.yml  ppa-upload.yml  update-repos.yml
.signpath/: windows-artifact-configuration.xml
Amiberry/: Amiberry.sln
VSLinux/: Amiberry.sln  Amiberry.vcxproj  Amiberry.vcxproj.filters  README.md
VisualGDB/: Amiberry.sln  README.md
abr/: brainfile.xml
android/: .gitignore  AGENTS.md  PLAY_STORE_DECLARATION.md  build.gradle  gradle.properties  local.properties  settings.gradle
azure-pipelines/: azure-pipeline-rpi32.yml  azure-pipelines.yml  pi64-dmx.yml  pi64.yml  rk3399-manjaro.yml  rk3399.yml  rpi1-sdl2.yml  rpi1.yml  rpi2-sdl2.yml  rpi2.yml  rpi3-32-dmx-rpios.yml  rpi3-32-sdl2-rpios.yml  rpi3-32-sdl2.yml  rpi3-64-dmx-rpios.yml  rpi3-64-dmx.yml  rpi3-64-sdl2-rpios.yml  rpi3-64-sdl2.yml  rpi3-sdl2.yml  rpi3.yml  rpi4-32-dmx-rpios.yml  rpi4-32-dmx.yml  rpi4-32-sdl2-rpios.yml  rpi4-32-sdl2.yml  rpi4-64-dmx-manjaro.yml  rpi4-64-dmx-rpios.yml  rpi4-64-dmx.yml  rpi4-64-sdl2-manjaro.yml  rpi4-64-sdl2-rpios.yml  rpi4-64-sdl2.yml  rpi4-sdl2.yml  rpi4.yml
cdroms/: dir.txt
cmake/: Dependencies.cmake  FindFLAC.cmake  FindHelper.cmake  FindMpg123.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake  Findmpg123.cmake  MacOSXBundleInfo.plist.in  SourceFiles.cmake  StandardProjectSettings.cmake  Toolchain-aarch64-linux-gnu.cmake  Toolchain-aarch64-w64-mingw32.cmake  Toolchain-arm-linux-gnueabihf.cmake  Toolchain-x86_64-w64-mingw32.cmake  gcc-flags-rpi5.cmake  gcc-flags-x86_64.cmake  libserialport_fix_android.cmake  optimize.cmake  package_strip_macos_metadata.cmake  portmidi_fix_android.cmake  portmidi_ptandroid.c
cmake/linux/: CMakeLists.txt  install.cmake
conf/: amiberry-osx.conf  amiberry.conf  dir.txt  gamecontrollerdb.txt
controllers/: dir.txt  gamecontrollerdb_user.txt
data/: Amiberry.desktop  Amiberry.metainfo.xml  Thumbs.db  icon.icns
debian/: changelog  control  copyright  rules
docs/: CNAME  README.md  _config.yml  android-limitations.md  code-signing-policy.md  copr-setup.md  index.md  linux-packages-setup.md  linux-packages.md  play-store-listing.md  ppa-setup.md  ppc-qemu-plugin.md  privacy-policy.md  shaders.md  zz9000.md
flatpak/: com.blitterstudio.amiberry.desktop  com.blitterstudio.amiberry.metainfo.xml  com.blitterstudio.amiberry.metainfo.xml.in  com.blitterstudio.amiberry.yml  generate-metainfo.sh
floppies/: dir.txt
guisan-dev/: Android.mk  Makefile
harddrives/: dir.txt
inputrecordings/: dir.txt
lha/: dir.txt
libretro/: .gitignore  AGENTS.md  Makefile  SDL.h  SDL_image.h  SDL_mutex.h  SDL_thread.h  SDL_ttf.h  gui_color_platform_libretro.h  gui_handling_stub.h  libretro.cpp  libretro_crop_helpers.h  libretro_gui_stubs.cpp  libretro_midi.cpp  libretro_sdl_image.cpp  libretro_sdl_ttf.cpp  libretro_shared.h  libretro_stubs.cpp  link.T  sdl_compat.h  sdl_stub.cpp
macos/: AppDMGSetup.scpt  make-bundle.sh
nbproject/: Readme.md  configurations.xml  project.properties  project.xml
nvram/: dir.txt
packaging/: Amiberry.desktop  CMakeLists.txt  Description.txt  MacOSXBundleInfo.plist.in
plugins/: dir.txt
roms/: dir.txt
savestates/: dir.txt
screenshots/: dir.txt
src/: AGENTS.md  AmiberryConfig.h.in  a2065.cpp  a2091.cpp  akiko.cpp  aks.def  amax.cpp  ar.cpp  arcadia.cpp  aros.rom.cpp  atonce.cpp  audio.cpp  autoconf.cpp  blitfunc.cpp  blitops.cpp  blittable.cpp  blitter.cpp  blitter_test.cpp  blkdev.cpp  blkdev_cdimage.cpp  bsdsocket.cpp  build68k.c  build68k.cpp  calc.cpp  casablanca.cpp  catweasel.cpp  cd32_fmv.cpp  cd32_fmv_genlock.cpp  cdrom.cpp  cdtv.cpp  cdtvcr.cpp  cfgfile.cpp  cia.cpp  codegen_arm.cpp  codegen_arm_debug.cpp  compemu.cpp  compemu_fpp.cpp  compemu_midfunc_arm.cpp  compemu_support.cpp  compstbl.cpp  (+180 more)
tests/: autocrop_helpers_test.cpp  cursor_pixel_format_test.cpp  fullscreen_mode_test.cpp  gfx_geometry_test.cpp  libretro_crop_policy_test.cpp  play_content_detection_test.cpp  play_setup_test.cpp  rp9_manifest_test.cpp  shader_catalog_test.cpp  test_autocrop_helpers.sh  test_cfgfile_board_rom_options.sh  test_cfgfile_gfxfilter_persistence.sh  test_cursor_pixel_format.sh  test_fullscreen_mode.sh  test_gfx_geometry.sh  test_libretro_content_staging_cleanup.sh  test_libretro_crop_policy.sh  test_libretro_rp9_disk_control.sh  test_log_noise_guards.sh  test_play_content_detection.sh  test_play_setup.sh  test_play_start_logic.sh  test_play_use_content_logic.sh  test_rp9_cd_swap_retention.sh  test_rp9_directory_media.sh  test_rp9_external_media.sh  test_rp9_file_associations.sh  test_rp9_manifest.sh  test_rp9_quickstart_transition.sh  test_rp9_ram_policy.sh  test_rp9_recursive_rom_scan.sh  test_rp9_rom_override_order.sh  test_rp9_snapshot_cleanup.sh  test_rp9_startup_directory.sh  test_rp9_undoable_hardfile.sh  test_shader_catalog.sh  test_sntprintf_buffer_sizes.sh  test_uaesnd_capture_fifo.sh  test_uaesnd_source.sh  uaesnd_capture_fifo_test.cpp
tools/: check_bsdsocket_host_safety.py  check_gencomp_outputs.py  check_libretro_contract.py  ipc_client.py  run_libretro_local.sh
whdboot/: AmiQuit  JST  WHDLoad  default_joystick.uae  default_mouse.uae  hostprefs.conf
whdboot-src/: FindAutoStartup.txt  GamebootLoader.txt  Splashscreen.txt  readme.txt
(+1806 files in other folders)
